# GroceryIntelligence

./: .replit  README.md  app.py  budget_tracker.py  database.py  grocery_manager.db  item_categorizer.py  nutrition_analyzer.py  ocr_processor.py  pyproject.toml
data/: nutritional_data.py
